<resources>

    <string name="required">Required</string>
    <string name="not_match_password">The password does not match. Please input again!</string>
    <string name="wrong_phone_number_type">Your phone number does not correct. Please check again!</string>
    <string name="phone_verify_content">We have sent to your phone number a verify code. Input that code below to active your account.</string>
    <string name="hello_text">Hello, %s</string>

    <string name="button_resend_code">Resend Code (%d)</string>
    <string name="exit_app_noti">Press back again to exit app.</string>
    <string name="loading_dialog">Loading</string>
    <string name="new_user">New User</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>

    <string name="app_name">KhoaLuan</string>
    <string name="searchHint">Tìm kiếm trên ...</string>
    <string name="trangChu">Trang Chủ</string>
    <string name="danhMuc">Danh Mục</string>
    <string name="taiKhoan">Tài Khoản</string>
    <string name="topFollow">Top Yêu Thích</string>
    <string name="topHot">Top Hot</string>
    <string name="topNew">Top Mới</string>
    <string name="more">Xem thêm...</string>
    <string name="tbDangNhap">Vui lòng đăng nhập</string>
    <string name="dangNhap">Đăng nhập</string>
    <string name="dangXuat">Đăng xuất</string>
    <string name="dangKy">Đăng ký</string>
    <string name="thongBao">Thông báo</string>
    <string name="lichSuDatCho">Lịch sử đặt chỗ</string>
    <string name="danhSachYeuThich">Danh sách yêu thích</string>
    <string name="capNhatTaiKhoan">Cập nhật tài khoản</string>
    <string name="ngonNgu">Ngôn ngữ</string>
    <string name="email">Địa chỉ Email</string>
    <string name="sodienthoai">Số điện thoại</string>
    <string name="matKhau">Mật khẩu</string>
    <string name="quenMatKhau">Quên mật khẩu?</string>
    <string name="dangNhapBangCachKhac">Đăng nhập bằng cách khác</string>
    <string name="nhapLaiMatKhau">Nhập lại mật khẩu</string>


</resources>
