<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fragment.DangNhapFragment">

        <TextView
            android:id="@+id/dangNhap_txtSoDienThoai"
            android:text="@string/sodienthoai"
            android:layout_marginTop="100dp"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/dangNhap_editTxtSoDienThoai"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/dangNhap_txtMatKhau"
            android:text="@string/matKhau"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/dangNhap_editTxtMatKhau"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/dangNhap_txtQuenMatKhau"
                android:text="@string/quenMatKhau"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_marginEnd="20dp"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/dangNhap_buttonDangNhap"
            android:text="@string/dangNhap"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

</LinearLayout>
